# samurai-cpp

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  build.sh  debug.lldb  debug.sh
src/: args.hpp  benchmark.cpp  marshall.cpp  marshall.hpp  samurai-c++.cpp  unittest.cpp  utils.hpp
src/config/: config.cpp  config.hpp
src/geometry/: artifact.hpp  container.hpp  layer.cpp  layer.hpp  linesegment.cpp  linesegment.hpp  model.cpp  model.hpp  triangle.cpp  triangle.hpp  vector.cpp  vector.hpp
src/geometry/layer/: layer.cpp  layer.hpp  loop.hpp
src/geometry/linesegment/: bench_linesegment.cpp  linesegment.cpp  linesegment.hpp  test_linesegment.cpp
src/geometry/loop/: loop.cpp  loop.hpp  test_loop.cpp
src/geometry/model/: model.cpp  model.hpp  test_model.cpp
src/geometry/triangle/: test_triangle.cpp  triangle.cpp  triangle.hpp
src/geometry/vector/: test_vector.cpp  vector.cpp  vector.hpp
src/parser/: binary_stl.cpp  binary_stl.hpp
src/ring/: ring.hpp  test_ring.cpp
